# pytest-bdd-framework

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
components/base/: base_page.py  base_wait.py
components/config/: urls.py
components/locators/: base_element.py  buttons.py  links.py  text_inputs.py
components/pages/login_page/: login_page.py
tests/: conftest.py  test_login_form.py
tests/features/: login_form.feature
tests/steps/: __init__.py  common_steps.py  login_steps.py
