[tool.poetry]
name        = "pytest_bdd_framework"
version     = "0.1.0"
description = "pytest_bdd framework"
authors     = ["Anastasia Litvinenko"]
license     = "MIT"
readme      = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
selenium = "^4.34.0"
webdriver-manager = "^4.0.0"
pytest-bdd = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit      = "^4.2"
pytest          = "^8.0"
ruff            = "^0.4"
black           = "^24.4"
mypy            = "^1.10"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "ui: marks tests as UI tests"
]
